type Container
  {
    materials: [MaterialEntity]
    participations: [Participation]
    materialProcessings: [MaterialProcessing]
    specimenCollectionProcesses: [SpecimenCollectionProcess]
    investigations: [Investigation]
    subjects: [Subject]
  }

type DataObject
  {
  }

type Investigation
  {
    id: Uriorcurie!
    name: String
    partOf: Investigation
  }

type MaterialEntity
  {
    id: Uriorcurie!
    name: String
    usedIn: [Investigation]
    source: Subject
    volume: Quantity
    concentration: Quantity
  }

type MaterialProcessing
  {
    id: Uriorcurie!
    name: String
    hasInput: [MaterialEntity]
    hasOutput: [MaterialEntity]
  }

type Participation
  {
    id: Uriorcurie!
    name: String
    involvedIn: [Investigation]
    includes: Subject
  }

interface Process
  {
    id: Uriorcurie!
    name: String
    hasInput: [String]
    hasOutput: [String]
  }

type Quantity
  {
    hasRawValue: String
    hasNumericValue: Float
    hasUnit: String
    comparator: String
  }

type SpecimenCollectionProcess
  {
    id: Uriorcurie!
    name: String
    hasInput: String
    hasOutput: String
  }

type Subject
  {
    id: Uriorcurie!
    name: String
  }

